<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_event"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_headset"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_forum"
            android:title="@string/discussion" />
    </group>

    <item android:title="@string/sub_items">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/dashboard" />
            <item
                android:icon="@drawable/ic_forum"
                android:title="@string/forum" />
        </menu>
    </item>

</menu>
